HW 10 - Try another thing

--- a/docs/hw10.md
+++ b/docs/hw10.md
@@ -14,7 +14,7 @@ In this Homework, I created a avalon bus platform to interact with three instant
 ![putty terminal output](./assets/IanCrittenden_HW-10_1_SC.png)
 ## 
 ### Equation for calculating resistance values for Red, Green, and Blue LEDs
-$$R = (V_s - V_f)/I_m$$  
+$$R = (V_s - V_f) \over I_m$$  
 Where:  
 $V_s$ is the supply voltage: 3.3V  
 $V_f$ is the forward voltage for the led (red, green, and blue have 2.1V, 3.1V, and 3.1V respectivly)  
